--- a/base/pod2-releases.yaml
+++ b/base/pod2-releases.yaml
@@ -11,5 +11,5 @@ spec:
       chart: pod2
       sourceRef:
         kind: HelmRepository
-        name: podinfo
+        name: pod2
   interval: 5m
