--- a/cluster/staging/kustomization.yaml
+++ b/cluster/staging/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base
+- ../base
+#  - .././base
 patchesStrategicMerge:
-  - podinfo-values.yaml
-  - pod2-values.yaml
+  - ./apps/podinfo/podinfo-values.yaml
+  - ./apps/pod2/pod2-values.yaml
