--- a/cluster/staging/apps/mysql/manifest.yaml
+++ b/cluster/staging/apps/mysql/manifest.yaml
@@ -1,61 +1,25 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: wordpress-mysql
-  labels:
-    app: wordpress-mysql
-spec:
-  ports:
-    - port: 3306
-  selector:
-    app: wordpress-mysql
-
-  clusterIP: ""
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: wordpress-mysql
-  labels:
-    app: wordpress-mysql
+  name: echoserver 
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: wordpress-mysql
-  serviceName: wordpress-mysql-headless
+      app: echoserver
   template:
     metadata:
       labels:
-        app: wordpress-mysql
-      annotations:
-        pre.hook.backup.velero.io/command: '["/bin/bash","-c", "mysql -uroot -p$MYSQL_ROOT_PASSWORD -e \"flush tables with read lock\""]'
-        post.hook.backup.velero.io/command: '["/bin/bash","-c", "mysql -uroot -p$MYSQL_ROOT_PASSWORD -e \"unlock tables\""]'
+        app: echoserver
     spec:
       containers:
-      - image: mysql:8.0
-        name: mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: Geheim
-        - name: MYSQL_DATABASE
-          value: wordpress
-        - name: MYSQL_USER
-          value: wordpress
-        - name: MYSQL_PASSWORD
-          value: Geheim
-        ports:
-        - containerPort: 3306
-          name: mysql
-        volumeMounts:
-        - name: mysql-data
-          mountPath: /var/lib/mysql
-
-  volumeClaimTemplates:
-    - metadata:
-        name: mysql-data
-      spec:
-        accessModes:
-          - ReadWriteOnce
+      - name: echoserver
+        image: jmalloc/echo-server
+        imagePullPolicy: IfNotPresent
         resources:
           requests:
-            storage: 5Gi
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "250m"
+            memory: "256Mi"
