--- a/cluster/staging/kustomization.yaml
+++ b/cluster/staging/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
+#- ./apps/mysql/manifest.yaml
 #  - .././base
 patchesStrategicMerge:
   - ./apps/podinfo/podinfo-values.yaml
   - ./apps/pod2/pod2-values.yaml
-  - ./apps/mysql/manifest.yaml
